--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 11:59:00 AM</p>
+    <p class="lastupdate">09/13/2020 12:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,13 +84,13 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">77.0<br/>
-            <span class="timestamp">11:58:55 AM</span><br/>
+          <td class="data new_row">77.6<br/>
+            <span class="timestamp">12:03:53 PM</span><br/>
             48.7<br/>
             <span class="timestamp">07:29:11 AM</span>
           </td>
-          <td class="data new_row">77.0<br/>
-            <span class="timestamp">11:58:55 AM (Sunday)</span><br/>
+          <td class="data new_row">77.6<br/>
+            <span class="timestamp">12:03:53 PM (Sunday)</span><br/>
             48.7<br/>
             <span class="timestamp">07:29:11 AM (Sunday)</span>
           </td>
@@ -113,11 +113,11 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">77.0<br/>
-            <span class="timestamp">11:58:55 AM</span>
+          <td class="data new_row">77.6<br/>
+            <span class="timestamp">12:03:53 PM</span>
           </td>
-          <td class="data new_row">77.0<br/>
-            <span class="timestamp">11:58:55 AM (Sunday)</span>
+          <td class="data new_row">77.6<br/>
+            <span class="timestamp">12:03:53 PM (Sunday)</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">09/06/2020 04:04:42 PM</span>
@@ -182,13 +182,13 @@
           <td class="units">%</td>
           <td class="data new_row">74<br/>
             <span class="timestamp">07:09:59 AM</span><br/>
-            31<br/>
-            <span class="timestamp">11:56:09 AM</span>
+            30<br/>
+            <span class="timestamp">12:02:59 PM</span>
           </td>
           <td class="data new_row">74<br/>
             <span class="timestamp">07:09:59 AM (Sunday)</span><br/>
-            31<br/>
-            <span class="timestamp">11:56:09 AM (Sunday)</span>
+            30<br/>
+            <span class="timestamp">12:02:59 PM (Sunday)</span>
           </td>
           <td class="data new_row">93<br/>
             <span class="timestamp">09/03/2020 06:37:07 AM</span><br/>
@@ -335,11 +335,11 @@
           </td>
           <td class="data new_row">
             0<br/>
-            187
+            186
           </td>
           <td class="data new_row">
             0<br/>
-            187
+            186
           </td>
           <td class="data new_row">
             0<br/>
